feat(api) : advance search v1
